o use List instead of LinkedList